<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <!-- Header -->
    <RelativeLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/friend_profile_header_height"
        android:background="@color/header_background"
        android:paddingStart="@dimen/spacing_lg"
        android:paddingEnd="@dimen/spacing_lg"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="@dimen/settings_button_size"
            android:layout_height="@dimen/settings_button_size"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_button_circle"
            android:contentDescription="@string/back"
            android:padding="@dimen/spacing_sm"
            android:src="@drawable/ic_arrow_back_settings" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/coming_soon"
            android:textColor="@color/primary_blue"
            android:textSize="@dimen/text_lg"
            android:fontFamily="sans-serif" />

    </RelativeLayout>

    <!-- Content -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/spacing_xl"
        app:layout_constraintTop_toBottomOf="@id/headerLayout"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_settings"
            android:alpha="0.3"
            app:tint="@color/accent_blue"
            android:contentDescription="@string/settings" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_lg"
            android:text="@string/feature_in_development"
            android:textSize="@dimen/text_lg"
            android:textColor="@color/secondary_gray"
            android:gravity="center" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
